# cloudmesh1

./: .RData  .Rhistory  .buildinfo  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CHANGES.txt  CONTRIBUTING.rst  Dockerfile  HACKING.rst  ISSUES  LICENSE.md  MANIFEST.in  Makefile  Makefile.gh-pages  README.md  README.rst  about.html  appendix.html  author.cfg  bib.html  bootstrap_install  celery.html  checklist.html  cloud.html  cloudmesh.html  clusterheatmap.py  cm-celery.html  cm-manage.html  cm-shell-new.html  cm-shell-rain.html  cm-shell.html  cm_template.py  cmd3-cmds.html  cobbler.html  coding.html  col.py  configure.html  contact.html  (+73 more)
_modules/: cloudmesh.html  cloudmesh_install.html  flask_restful.html  index.html
_sources/: about.txt  celery.txt  cloudmesh.txt  cm-shell-new.txt  cm-shell.txt  cobbler.txt  coding.txt  configure.txt  contact.txt  contributing.txt  developer.txt  doc.txt  faq.txt  hacking.txt  index-other.txt  introduction.txt  rain.txt  screenshots.txt  shell.txt
cloudmesh/: __init__.py  cloud_mesh.py  cloud_mesh_db.py  cloudmesh-template.yaml  cloudmesh.py  cloudmesh_cloud.py  cloudmesh_clouds.yaml  cloudmesh_metric.py  cloudmesh_mongo.py  cloudmesh_new.py  cm-rc.py  cm_cli.py  cm_cloudsinfo.py  cm_config.py  cm_keys.py  cm_mesh.py  cm_mongo.py  cm_mongo2.py  cm_mongodb.py  cm_profile.py  cm_projects.py  cm_rc.py  cm_register.py  credentials-example.yaml  data.yaml  gitinfo.py  inventory.py  ldap_user.py  mock_cloud.py  mock_keystone.py  mock_user.py  mongodb.py  monitoring.py  openstack_grizzly_cloud.py  test_cloudmesh.py  test_cm_config.py  test_cm_keys.py  test_cm_projects.py  util.py  version.py
cloudmesh_admin/: admin.py  clean.py  server_admin.py
cloudmesh_common/: __init__.py  bootstrap_util.py  logger.py  tables.py  util.py
cloudmesh_examples/: README.rst  cm-tasks.py  prg.py
cloudmesh_install/: __init__.py  futuregrid.py  install.py  todo.py  util.py
cloudmesh_web/: __init__.py  a.py  server.py
cm/: Makefile  cm  fabfile.py  server.py  setup.py
cmd/: mixin.py  shell.py
deprecated/: cloud.py  cloudmesh_cloud.py  cloudmesh_new.py  cm_compute_old.py  cm_credential.py  cm_shell_cloud_old.py  cm_shell_cloud_old.py-old  cm_shell_defaults_old.py  cm_shell_defaults_old.py-old  cm_shell_list_old.py  cm_shell_rain_old.py  cm_shell_rain_old.py-old  cm_shell_vm_old.py  fg_cmd.py  login.py  login_simple.html  module_deleted.py  mongodb.py  old-inventory.py  s.py  t.py  tmp_vm_interface.py-ufo  x.py
dev/: deprecated.html
doc/: Makefile  index.rst
docs/: Makefile  fab
etc/: FGLdapCacert.pem  cloudmesh-server.yaml  cloudmesh-template.yaml  cloudmesh.yaml  cloudmesh_bootspec.yaml  cloudmesh_celery.yaml  cloudmesh_cluster.yaml  cloudmesh_country.yaml  cloudmesh_disciplines.yaml  cloudmesh_flavor.yaml  cloudmesh_launcher.yaml  cloudmesh_mac.yaml  cloudmesh_osdb.yaml  cloudmesh_rack.yaml  cloudmesh_server.yaml  cloudmesh_states.yaml  credentials-example.yaml  defaults.yaml  india-havana-cacert.pem  india-juno-cacert.pem  ipython_notebook_config.py  me-all.yaml  me-fg.yaml  me-mesh.yaml  me-none.yaml  me-sample.yaml  me-template.yaml  me.yaml  none.yaml  sample_user.yaml  sierra-cacert.pem  user_info.yaml
fabfile/: __init__.py  build.py  clean.py  doc.py  git.py  hpc.py  india.py  install.py  iptable.py  ipython.py  manage.py  mongo.py  mooc.py  mq.py  nose.py  pep8.py  progress.py  pypi.py  qc.py  queue.py  rcfile.py  security.py  server.py  test.py  tunnel.py  user.py  util.py
flask/: .gitignore  CHANGES.txt  fabfile.py  setup.py
flask_cm/: server.py  server_metric.py  server_new.py
install/: fabfile.py  install.py  ubuntu.sh
install-scripts/: install.py  ubuntu.sh  ubuntu2.sh
installation/: install.py  util.py
inventory/: .project  fabfile.py  server.config  server.py
ipython/: Lesson 1 - Initializing.ipynb  Lesson 2 - Interacting with a Cloud.ipynb  Lesson 4 - Managing Public IPs.ipynb  Lesson 7 - Interfaceing with Java.ipynb  Lesson 8 - HPC Queues.ipynb
man/: README.html  man.html
modules/: cloudmesh.accounting.html  cloudmesh.config.html  cloudmesh.experiment.html  cloudmesh.html  cloudmesh.iaas.aws.html  cloudmesh.iaas.aws.queue.html  cloudmesh.iaas.azure.html  cloudmesh.iaas.azure.queue.html  cloudmesh.iaas.docker.html  cloudmesh.iaas.ec2.html  cloudmesh.iaas.ec2.queue.html  cloudmesh.iaas.eucalyptus.html  cloudmesh.iaas.html  cloudmesh.iaas.opencirrus.html  cloudmesh.iaas.openstack.html  cloudmesh.iaas.openstack.queue.html  cloudmesh.iaas.vagrant.html  cloudmesh.image.html  cloudmesh.keys.html  cloudmesh.launcher.html  cloudmesh.launcher.queue.html  cloudmesh.management.html  cloudmesh.metric.api.html  cloudmesh.metric.eucalyptus.html  cloudmesh.metric.html  cloudmesh.metric.openstack.html  cloudmesh.metric.rest.html  cloudmesh.pbs.html  cloudmesh.provisioner.html  cloudmesh.provisioner.queue.html  cloudmesh.rack.html  cloudmesh.rack.queue.html  cloudmesh.rain.cobbler.html  cloudmesh.rain.cobbler.queue.html  cloudmesh.rain.html  cloudmesh.server.html  cloudmesh.sh.html  cloudmesh.shell.html  cloudmesh.temperature.html  cloudmesh.user.html  (+14 more)
old/: accounting.py
old-cm/: cm.html  cm_cli.html  cmcli.html  intro.html
other/: cm.py
plan/: design.html  mock.html  plan.html
qc/: README.html
queue/: celery.py  tasks.py
simple/: celery.py  tasks.py
src/: .#t  .gitignore  CHANGES.txt  Inventory.py  Required JSON Data  a.py  azure.py  azure_error  cm  fabfile.py  fg-gregor.py  fg-inventory.py  fg_cmd.py  foo.txt  foo1.txt  metrics.py  myInventory.py  provisiner.py  server.py  setup.py  test-inventory.py
tests/: TODO.rst  fabfile.py  install-pip.sh  install.sh  new.sh  test-inventory.py  test_azure_compute.py  test_cloudmesh.py  test_cluster_api.py  test_cm.py  test_cm_api.py  test_cm_auth.py  test_cm_cloud.py  test_cm_cluster.py  test_cm_compute.py  test_cm_console.py  test_cm_console_ext.py  test_cm_for_cmmooc.py  test_cm_keys.py  test_cm_launcher.py  test_cm_shell.py  test_compute.py  test_config.py  test_eucalyptus.py  test_inventory.py  test_keys.py  test_keystone.py  test_ldap.py  test_log.py  (+15 more)
(+1374 files in other folders)
