[metadata]
name = cloudmesh
version = 0.7
summary = A tool to simplify managing multiple clouds including bare metal provisioning
description-file =
    README.rst
author = Cloudmesh Team
author-email = laszewski@gmail.com
home-page = http://github.org/cloudmesh/cloudmesh
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux :: MacOS :: MacOS X
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Boot
    Topic :: System :: Systems Administration
    Framework :: Flask
    Environment :: OpenStack


[global]
setup-hooks =
    pbr.hooks.setup_hook

[install]
install-data=$HOME

[files]
packages =
    cloudmesh

data_files =
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_inventory.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_rain.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_project.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_vm.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_init.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_cloud.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_keys.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_user.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_list.py
	.futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_exp.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_defaults.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_register.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/__init__.py
    .futuregrid/cmd3local/plugins/Interface = cmd3local/plugins/Interface/__init__.py
    .futuregrid/cmd3local/plugins/Interface = cmd3local/plugins/Interface/vm_interface.py
    .futuregrid = etc/FGLdapCacert.pem
    .futuregrid = etc/sierra-cacert.pem
    .futuregrid/racks/diag = etc/racks/rack.diag
    .futuregrid/racks/diag = etc/racks/india.diag
    .futuregrid/racks/diag = etc/racks/echo.diag
    .futuregrid/racks/diag = etc/racks/bravo.diag
    .futuregrid/racks/diag = etc/racks/delta.diag
    .futuregrid/racks/diag = etc/racks/unknown.diag
    .futuregrid/workflows = etc/workflows/a.diag
    .futuregrid/workflows = etc/workflows/abc.diag
    .futuregrid/etc = etc/sample_user.yaml
    .futuregrid/etc = etc/cloudmesh.yaml
    .futuregrid/etc = etc/none.yaml
    .futuregrid/etc = etc/me.yaml
    .futuregrid/etc = etc/cloudmesh_server.yaml
    .futuregrid/etc = etc/cloudmesh_rack.yaml
    .futuregrid/etc = etc/cloudmesh_bootspec.yaml
    .futuregrid/etc = etc/cloudmesh_celery.yaml
    .futuregrid = etc/cloudmesh_launcher.yaml
    .futuregrid = etc/cloudmesh_rack.yaml
    .futuregrid = etc/cloudmesh_celery.yaml
    .futuregrid = etc/cloudmesh_bootspec.yaml
    .futuregrid = etc/cloudmesh_launcher.yaml

# .futuregrid/etc = etc/cloudmesh_cluster.yaml

[entry_points]
console_scripts =
    cm-manage = cloudmesh.config.cm_manage:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

#data_files=[('cloudmesh', ['cloudmesh/cloudmesh_template.yaml', 'cloudmesh/cloudmesh_clouds.yaml'])],