[metadata]
name = cloudmesh
version = 0.8.1
summary = A tool to simplify managing multiple clouds including bare metal provisioning
description-file =
    README.rst
author = Cloudmesh Team
author-email = laszewski@gmail.com
home-page = http://github.org/cloudmesh/cloudmesh
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux :: MacOS :: MacOS X
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Boot
    Topic :: System :: Systems Administration
    Framework :: Flask
    Environment :: OpenStack


[global]
setup-hooks =
    pbr.hooks.setup_hook

[install]
install-data=$HOME

[files]
packages =
    cloudmesh
    cloudmesh_install
    cloudmesh_common

data_files =
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_label.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_vm.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_inventory.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_project.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_exp.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_register.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_rain.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_storm.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_metric.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_init.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_cloud.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_keys.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_user.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_list.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_defaults.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_flavor.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_image.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_security_group.py
    .futuregrid/cmd3local/plugins = cmd3local/plugins/__init__.py
    .futuregrid = etc/FGLdapCacert.pem
    .futuregrid = etc/sierra-cacert.pem
    .futuregrid/etc/racks/diag = etc/racks/rack.diag
    .futuregrid/etc/racks/diag = etc/racks/india.diag
    .futuregrid/etc/racks/diag = etc/racks/echo.diag
    .futuregrid/etc/racks/diag = etc/racks/bravo.diag
    .futuregrid/etc/racks/diag = etc/racks/delta.diag
    .futuregrid/etc/racks/diag = etc/racks/unknown.diag
    .futuregrid/etc/workflows = etc/workflows/a.diag
    .futuregrid/etc/workflows = etc/workflows/abc.diag
    .futuregrid/etc = etc/cloudmesh.yaml
    .futuregrid/etc = etc/me-none.yaml
    .futuregrid/etc = etc/cloudmesh.yaml
    .futuregrid/etc = etc/cloudmesh_server.yaml
    .futuregrid/etc = etc/cloudmesh_rack.yaml
    .futuregrid/etc = etc/cloudmesh_celery.yaml
    .futuregrid/etc = etc/cloudmesh_mac.yaml

#
# THIS IS NOT GOOD AS IT OVERWRITES EXISTING FILES WE MAY HAVE MODIFIED
#
#    .futuregrid = etc/cloudmesh_launcher.yaml
#    .futuregrid = etc/cloudmesh_rack.yaml
#    .futuregrid = etc/cloudmesh_celery.yaml
#    .futuregrid = etc/cloudmesh_launcher.yaml
#    .futuregrid = etc/cloudmesh_mac.yaml

# .futuregrid/etc = etc/cloudmesh_cluster.yaml

[entry_points]
console_scripts =
    cm-manage = cloudmesh.config.cm_manage:main
    cm-init = cloudmesh.config.cm_init:main
    cm-image  = cloudmesh.image.cm_image:main
    cm-metric = cloudmesh.metric.cm_metric:main
    cm-rain = cloudmesh.rain.cobbler.cobbler_rain:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

#data_files=[('cloudmesh', ['cloudmesh/cloudmesh_template.yaml', 'cloudmesh/cloudmesh_clouds.yaml'])],
