[metadata]
name = cloudmesh
version = 0.8.1
summary = A tool to simplify managing multiple clouds including bare metal provisioning
description-file =
    README.rst
author = Cloudmesh Team
author-email = laszewski@gmail.com
home-page = http://github.org/cloudmesh/cloudmesh
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux :: MacOS :: MacOS X
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Boot
    Topic :: System :: Systems Administration
    Framework :: Flask
    Environment :: OpenStack


[global]
setup-hooks =
    pbr.hooks.setup_hook

[install]
install-data=$HOME

[files]
packages =
    cloudmesh
    cloudmesh_install
    cloudmesh_common

data_files =
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/*
    .cloudmesh = etc/FGLdapCacert.pem
    .cloudmesh = etc/sierra-cacert.pem
    .cloudmesh/etc/racks/diag = etc/racks/*
    .cloudmesh/etc = etc/cloudmesh.yaml
    .cloudmesh/etc = etc/me-none.yaml
    .cloudmesh/etc = etc/cloudmesh.yaml
    .cloudmesh/etc = etc/cloudmesh_server.yaml
    .cloudmesh/etc = etc/cloudmesh_rack.yaml
    .cloudmesh/etc = etc/cloudmesh_celery.yaml
    .cloudmesh/etc = etc/cloudmesh_mac.yaml
    .cloudmesh/etc = etc/cloudmesh_flavor.yaml
    .cloudmesh = etc/cloudmesh_flavor.yaml

#
# THIS IS NOT GOOD AS IT OVERWRITES EXISTING FILES WE MAY HAVE MODIFIED
#
#    .cloudmesh = etc/cloudmesh_launcher.yaml
#    .cloudmesh = etc/cloudmesh_rack.yaml
#    .cloudmesh = etc/cloudmesh_celery.yaml
#    .cloudmesh = etc/cloudmesh_launcher.yaml
#    .cloudmesh = etc/cloudmesh_mac.yaml

# .cloudmesh/etc = etc/cloudmesh_cluster.yaml

[entry_points]
console_scripts =
    cm-manage = cloudmesh.config.cm_manage:main
    cm-init = cloudmesh.config.cm_init:main
    cm-image  = cloudmesh.image.cm_image:main
    cm-metric = cloudmesh.metric.cm_metric:main
    cm-rain = cloudmesh.rain.cobbler.cobbler_rain:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

#data_files=[('cloudmesh', ['cloudmesh/cloudmesh_template.yaml', 'cloudmesh/cloudmesh_clouds.yaml'])],
